se agregan funcionalidades finales

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+html{
+    font-family: 'Roboto', sans-serif;
+    scroll-behavior: smooth;
+}
+
+/*sección nav*/
+nav a{
+    font-weight: 600;
+}
+
 /*sección carrusel*/
 .carousel-item{
     height: 100vh;
@@ -27,6 +37,10 @@ div .carousel-item .active{
     background-color: #00b4d8;
 }
 
+#presentacion p{
+    font-weight: 200;
+}
+
 /*sección destacados*/
 #destacados{
     background-color: #000;
@@ -39,6 +53,11 @@ div .carousel-item .active{
 
 #destacados .card-body{
     background-color: #00b4d8;
+}
+
+#destacados p{
+    font-weight: 200;
+    
 }
 
 /*seccion contacto*/
@@ -56,6 +75,12 @@ div .carousel-item .active{
     background-color: #00b4d8;
 }
 
+#Footer a{
+    text-decoration: none;
+    color: white;
+}
+
+/*vista celular*/
 @media (max-width: 576px){
     .carousel-item{
         height: 37vh;
